config-root/namespaces/jx-staging/python06/python06-python06-deploy.yaml
# Source: python06/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python06-python06
  labels:
    draft: draft-app
    chart: "python06-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: python06-python06
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: python06-python06
    spec:
      serviceAccountName: python06-python06
      containers:
        - name: python06
          image: "ghcr.io/keefans/python06:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
