config-root/namespaces/jx-staging/python06/python06-ingress.yaml
# Source: python06/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: python06
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: python06
              servicePort: 80
      host: python06-jx-staging.jx3.sky-cloud.net
